style.css
:root {
--col-prim-red: hsl(0, 100%, 74%);
--col-prim-green: hsl(154, 59%, 51%);
--col-neut-dark-blue: hsl(249, 10%, 26%);
--col-neut-gray-blue: hsl(246, 25%, 77%);
--col-accent-blue: hsl(248, 32%, 49%);

}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}


body {
    font-family: 'Poppins', sans-serif;
    font-size: 1rem;
    display: grid;
    place-content: center;
    min-height: 100lvh;

}

section {
    background-image: url(./images/bg-intro-mobile.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-color: var(--col-prim-red);
    display: grid;
    max-width: 90vw;
    margin: auto;
    text-align: center;
    color: hsl(0, 10%, 100%);
    padding-top: 3vh;
    row-gap: 1rem;
    min-height: 100dvh;
    padding: 0 1rem 2rem;
}

h1 {
    font-size: 1.5rem;
    padding: 1.5rem 10vw 1.5rem;
}

hgroup {
    padding: 3rem 0;
}

.try-it {
    background-color: var(--col-accent-blue);
    padding: 1rem 13vw;
    border-radius: .6rem;
    -webkit-border-radius: .6rem;
    -moz-border-radius: .6rem;
    -ms-border-radius: .6rem;
    -o-border-radius: .6rem;
    max-height: min-content;
    font-weight: 400;
    height: min-content;
    box-shadow: 0rem .5rem .1rem hsla(249, 10%, 26%, 25%);
}

.form-container {
    background-color: white;
    border-radius: .8rem;
    color: var(--col-neut-gray-blue);
    padding: 1.4rem;
    box-shadow: 0rem .5rem .1rem hsla(249, 10%, 26%, 25%);
}

ul {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

ul li {
    border-radius: .5rem;
    min-width: 100%;
    position: relative;
}

input, #submit {
    padding: .9rem;
    width: 100%;
    border-radius: .3rem;
}

input {
    border: 1px solid var(--col-neut-gray-blue);
}

input::placeholder {
    font-weight: 700;
}

.invalid {
    border: 2px solid var(--col-prim-red);
}

#submit {
    background-color: var(--col-prim-green);
    color: white;
    text-transform: uppercase;
    border: none;
    font-weight: 600;
}

.terms {
    font-weight: 400;
    font-size: .7rem;
    padding: .7rem;
}
.terms a {
    color: var(--col-prim-red);
    font-weight: 700;
    text-decoration: none;
}

.error {
    display: none;
    text-align: right;
    font-size: .6rem;
    color: var(--col-prim-red);
    font-weight: 600;
    margin-top: .2rem;
    font-style: italic;
}

.active {
    display: block;
}

img.error {
    position: absolute;
    right: 1rem;
    bottom: calc(50% - 6px);
}

@media(hover: hover) and (pointer: fine) {
    #submit:hover {
        cursor: pointer;
        transform: scale(1.03);
        background-color: rgb(83, 230, 166);
        transition: transform .5s;
        -webkit-transition: transform .5s;
        -moz-transition: transform .5s;
        -ms-transition: transform .5s;
        -o-transition: transform .5s;
        -webkit-transform: scale(1.03);
        -moz-transform: scale(1.03);
        -ms-transform: scale(1.03);
        -o-transform: scale(1.03);
}
}

@media screen and (min-width: 38rem) {


    section {
        background-image: url(./images/bg-intro-desktop.png);
        grid-template-columns: 1fr 1fr;
        grid-template-rows: .1fr 1fr;
        text-align: left;
        column-gap: 5vw;
        max-width: 90rem;
        max-height: 50rem;
        min-height: auto;
        padding: clamp(2rem, 11vw, 10rem);
    }

    h1 {
        padding: 1.5rem 0;
        font-size: clamp(1.5rem, 4vw, 3rem);
    }

    hgroup {
        grid-row-start: 1;
        grid-row-end: 3;
        grid-column-start: 1;

    }

    .try-it {
        padding: 1rem clamp(1rem, 3vw, 3rem);
    }

    .terms {
        text-align: center;
    }
}

.visually-hidden {
    border-width: 0 !important;
    clip: rect(1px, 1px, 1px, 1px) !important;
    height: 1px !important;
    overflow: hidden !important;
    padding: 0 !important;
    position: absolute !important;
    white-space: nowrap !important;
    width: 1px !important;
  }

